--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "name": "apimeme",
-  "version": "1.0.0",
-  "description": "node module for apimeme.com",
+  "version": "1.0.1",
+  "description": "generate memes via apimeme.com",
+  "keywords": ["meme", "doge", "generate", "lol", "apimeme"],
   "main": "index.js",
   "scripts": {
     "test": "mocha test",
